--- a/public/css/style.css
+++ b/public/css/style.css
@@ -468,6 +468,14 @@ table {
   border: none;
 }
 
+#mynetwork {
+  width: 100%;
+  height: 400px;
+  border: 1px solid lightgray;
+  display: none;
+  margin-bottom: 25px;
+}
+
 @media print {
   header{
     display: none;
