--- a/public/css/style.css
+++ b/public/css/style.css
@@ -468,7 +468,7 @@ table {
   border: none;
 }
 
-#mynetwork {
+#mynetwork_source,#mynetwork_destination {
   width: 100%;
   height: 400px;
   border: 1px solid lightgray;
