--- a/views/partials/networks.hbs
+++ b/views/partials/networks.hbs
@@ -2,8 +2,11 @@
 <br>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12">
-            <div id="mynetwork"></div>
+        <div class="col-md-6">
+            <div id="mynetwork_source"></div>
+        </div>
+        <div class="col-md-6">
+            <div id="mynetwork_destination"></div>
         </div>
     </div>
 </div>
